# antlr-cpp-statistical-interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: EvalVisitor.cpp  EvalVisitor.h  SistemaEvaluacion.cpp  SistemaEvaluacion.h  SymbolTable.h  demo_simple.txt  ejemplo_evaluacion.txt  main.cpp  test_completo.txt  test_fisher_avanzado.txt  test_minimal.txt  test_simple.txt
src/grammar/: EmployeeEval.g4  EvaluacionFisher.g4  EvaluacionFisher.interp  EvaluacionFisherBaseListener.cpp  EvaluacionFisherBaseListener.h  EvaluacionFisherLexer.cpp  EvaluacionFisherLexer.h  EvaluacionFisherLexer.interp  EvaluacionFisherLexer.tokens  EvaluacionFisherListener.cpp  EvaluacionFisherListener.h  EvaluacionFisherParser.cpp  EvaluacionFisherParser.h
